2006-08-09 Naba Kumar  <naba@gnome.org>

	* plugins/sourceview/sourceview.c:  Implemented get_tabsize(),
	get_use_spaces(), set_tabsize() and set_use_spaces().

2006-08-09 Naba Kumar  <naba@gnome.org>

	* libanjuta/anjuta-plugin.c: Only merge preferences if the plugin
	succeeded in activating.

	* plugins/document-manager/plugin.c: Added debug message.

	* libanjuta/interfaces/libanjuta.idl,
	plugins/editor/text_editor.c: Implemented get_tabsize(),
	get_use_spaces(), set_tabsize() and set_use_spaces().

	* plugins/language-support-cpp-java/Makefile.am,
	plugins/language-support-cpp-java/plugin.c,
	plugins/language-support-cpp-java/plugin.h: Used editor parameters
	for indentation. Added preferences page for paramenters.

	* manuals/reference/libanjuta/tmpl/ianjuta-editor.sgml: Updated.

2006-08-08 Naba Kumar  <naba@gnome.org>

	* libanjuta/interfaces/libanjuta.idl,
	manuals/reference/libanjuta/tmpl/ianjuta-editor.sgml,
	manuals/reference/libanjuta/tmpl/libanjuta-unused.sgml,
	plugins/editor/text_editor.c,
	plugins/sourceview/sourceview.c: Added grab_focus() in IAnjutaEditor
	and implemented it for both scintilla and sourceview.

	* plugins/search/plugin.c: Use the new grab_focus() to transfer
	focus back to editor (happens when pressing esc in incremental
	search box).

2006-08-08 Naba Kumar  <naba@gnome.org>

	* libanjuta/interfaces/libanjuta.idl,
	plugins/editor/text_editor.c,
	plugins/editor/text_editor.h,
	plugins/editor/text-editor-iterable.c,
	plugins/sourceview/sourceview-cell.c,
	plugins/sourceview/sourceview.c: Implemented editor attributes
	methods.
	
	* plugins/editor/aneditor.cxx: Disabled old indentation code.
	plugins/language-support-cpp-java/plugin.c: Implemented indentation
	code (not complete yet).

	* manuals/reference/libanjuta/tmpl/anjuta-preferences-dialog.sgml,
	manuals/reference/libanjuta/tmpl/anjuta-preferences.sgml,
	manuals/reference/libanjuta/tmpl/ianjuta-editor.sgml,
	manuals/reference/libanjuta/tmpl/ianjuta-iterable.sgml,